# docs/swagger.yaml
@@ -1,5 +1,41 @@
 basePath: /
 definitions:
+  main.Adult:
+    properties:
+      birth_year:
+        example: 1990
+        type: integer
+      id:
+        example: 550e8400-e29b-41d4-a716-446655440000
+        type: string
+      image_url:
+        example: https://example.com/photo.jpg
+        type: string
+      last_name:
+        example: Doe
+        type: string
+      name:
+        example: John
+        type: string
+    type: object
+  main.Child:
+    properties:
+      birth_year:
+        example: 2015
+        type: integer
+      id:
+        example: 550e8400-e29b-41d4-a716-446655440000
+        type: string
+      image_url:
+        example: https://example.com/child_photo.jpg
+        type: string
+      last_name:
+        example: Doe
+        type: string
+      name:
+        example: Jane
+        type: string
+    type: object
   main.Response:
     properties:
       message:
@@ -14,7 +50,16 @@ info:
 paths:
   /Add/Adults:
     post:
+      consumes:
+      - application/json
       description: Add a new adult
+      parameters:
+      - description: Adult Object
+        in: body
+        name: adult
+        required: true
+        schema:
+          $ref: '#/definitions/main.Adult'
       produces:
       - application/json
       responses:
@@ -27,7 +72,16 @@ paths:
       - Adults
   /Add/Children:
     post:
+      consumes:
+      - application/json
       description: Add a new child
+      parameters:
+      - description: Child Object
+        in: body
+        name: child
+        required: true
+        schema:
+          $ref: '#/definitions/main.Child'
       produces:
       - application/json
       responses:
@@ -47,7 +101,9 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/main.Response'
+            items:
+              $ref: '#/definitions/main.Adult'
+            type: array
       summary: Get all adults
       tags:
       - Adults
@@ -66,7 +122,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/main.Response'
+            $ref: '#/definitions/main.Adult'
       summary: Get adult by ID
       tags:
       - Adults
@@ -79,7 +135,9 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/main.Response'
+            items:
+              $ref: '#/definitions/main.Child'
+            type: array
       summary: Get all children
       tags:
       - Children
@@ -98,7 +156,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/main.Response'
+            $ref: '#/definitions/main.Child'
       summary: Get child by ID
       tags:
       - Children
